# Fluent-Extractor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  package.xml
FluentCalculator/: CMakeLists.txt  FluentCalculator.cpp  FluentCalculator.h  README  Test.cpp  test_pcd.pcd
launch/: all.launch
msg/: ClothSegment.msg
scripts/: arm_status.py  cloth_folder.py  dry_run.py  fluent_lookup.py  manual_coded.py  manual_coded_backup.py  mark_fold.py  scoop_fold.py  value_inferer.py  value_inferer_backup.py
src/: CommonTools.h  FileFrameScanner.cpp  FileFrameScanner.h  FluentCalc.cpp  FluentCalc.h  FoldSimulator.cpp  FoldSimulator.h  Seg2D.cpp  Seg2D.h  action_inferer.cpp  camera_pointer.cpp  fluent_calc_tester.cpp  fluent_extractor.cpp  vision_buffer.cpp
src/segment/: Makefile  pnmfile.h  segment  segment-image.h  tabletop.ppm  tabletop_output.ppm
svm_rank_linux64/: .gitignore  action_dataset.txt  cloth_grid_predictions  cloth_model  cloth_predictions  cross_validation.py  dense_violations.npy  dense_violations_35.npy  fluent_data_loader.py  get_image.py  gmm_test.py  hierarchical_plan.py  infer_total_utility.py  minimaxent.py  minimaxent2.py  minimaxent3.py  minimaxent4.py  minimaxent5.py  mk_test_grid.py  my_grid_predictions  my_model  my_predictions  plot_execution.py  plot_explainable_utilities.py  plot_minimax_survey.py  plot_survey_results.py  plot_violations.py  predictions  process_actions.py  process_actions_gmm.py  run.sh  sparse_violations.npy  sparse_violations_35.npy  survey.csv  value_gradient.py  value_model  value_predictions  value_viz.py  value_viz_image.py  visualize_predictions.py
svm_rank_linux64/cross_validation/: get_weights_from_model.py  param_grid_search.py  svm_predictions
svm_rank_linux64/train_datasets/: value_model_1  value_model_10  value_model_11  value_model_12  value_model_13  value_model_14  value_model_15  value_model_16  value_model_17  value_model_18  value_model_19  value_model_2  value_model_20  value_model_21  value_model_22  value_model_23  value_model_24  value_model_25  value_model_26  value_model_27  value_model_28  value_model_29  value_model_3  value_model_30  value_model_31  value_model_32  value_model_33  value_model_34  value_model_35  value_model_36  value_model_37  value_model_38  value_model_39  value_model_4  value_model_40  value_model_41  value_model_42  value_model_43  value_model_44  value_model_5  (+4 more)
svm_rank_linux64/train_datasets2/: value2_model_1  value2_model_10  value2_model_11  value2_model_12  value2_model_13  value2_model_14  value2_model_15  value2_model_16  value2_model_17  value2_model_18  value2_model_19  value2_model_2  value2_model_20  value2_model_21  value2_model_22  value2_model_23  value2_model_24  value2_model_25  value2_model_26  value2_model_27  value2_model_28  value2_model_29  value2_model_3  value2_model_30  value2_model_31  value2_model_32  value2_model_33  value2_model_34  value2_model_35  value2_model_36  value2_model_37  value2_model_38  value2_model_39  value2_model_4  value2_model_40  value2_model_41  value2_model_42  value2_model_43  value2_model_44  value2_model_45  (+5 more)
